fix some styles overlapping the padding/spacings

--- a/projects/packages/my-jetpack/_inc/components/product-interstitial/jetpack-ai/style.module.scss
+++ b/projects/packages/my-jetpack/_inc/components/product-interstitial/jetpack-ai/style.module.scss
@@ -130,19 +130,23 @@
 .product-interstitial__section {
 	font-size: 16px;
 	line-height: 24px;
-	padding: calc( var( --spacing-base ) * 6 ) var( --spacing-base );
+	padding-top: calc( var( --spacing-base ) * 6 );
+	padding-bottom: calc( var( --spacing-base ) * 6 );
 
 	&:first-child {
 		// exception for the header section
-		padding: 0 var( --spacing-base );
+		padding-top: 0;
+		padding-bottom: 0;
 	}
 
 	&:nth-child(even) {
 		background-color: var( --jp-white-off );
-		padding: calc( var( --spacing-base ) * 8 ) var( --spacing-base );
+		padding-top: calc( var( --spacing-base ) * 8 );
+		padding-bottom: calc( var( --spacing-base ) * 8 );
 
 		@media only screen and (max-width: 960px) {
-			padding: calc( var( --spacing-base ) * 6 ) var( --spacing-base );
+			padding-top: calc( var( --spacing-base ) * 6 );
+			padding-bottom: calc( var( --spacing-base ) * 6 );
 		}
 	}
 
@@ -164,7 +168,7 @@
 		max-width: 1128px;
 		margin: 0 auto;
 
-		@media only screen and (max-width: 960px) {
+		@media only screen and (max-width: 1366px) {
 			padding-left: calc( var( --spacing-base ) * 3 );
 			padding-right: calc( var( --spacing-base ) * 3 );
 		}
